--- a/Posicion de Cajas/index.html
+++ b/Posicion de Cajas/index.html
@@ -9,9 +9,10 @@
     <div class="cuadrado1">
       <div class="cuadrado2"></div>
       <div class="cuadrado3"></div>
-      <div class="cuadrado4"></div>
+    </div>
+    <div class="cuadrado4">
       <div class="cuadrado5"></div>
       <div class="cuadrado6"></div>
-    </div>
+    </div>    
   </body>
 </html>
