avances actividades anteriores y otro trabajo extra

--- a/Triptico/index.html
+++ b/Triptico/index.html
@@ -36,7 +36,7 @@
           <img src="SMC2.jpg">
       </div>
     <div class="abajo">
-      <h4>Con información de</h4>
+      <p class="fin">Con información de</p>
       <a href="http://es.sailormoon.wikia.com">Sailor Moon Wiki</a>
     </div>
   </body>
